--- a/css/1.root.css
+++ b/css/1.root.css
@@ -1,8 +1,14 @@
 .main>.article {
-    display: flow-root;
     padding: 0 var(--length-padding);
     margin: 0 auto;
     max-width: var(--length-width);
     min-width: 100px;
     margin-bottom: 100vh;
+}
+
+@media print {
+    .main>article {
+        margin: 0;
+        padding: 0;
+    }
 }
