--- a/css/2.tree.css
+++ b/css/2.tree.css
@@ -13,7 +13,7 @@
     display: block;
     width: 1em;
     text-align: center;
-    content: "-";
+    content: "−";
 }
 
 .heading-tree .tree.folded>.data>.mark::before {
@@ -25,7 +25,7 @@
 }
 
 .heading-tree .children {
-    margin-left: .5em;
+    margin-left: calc(.5em - .5px);
     border-left: 1px solid var(--color-border);
 }
 
