--- a/css/1.root.css
+++ b/css/1.root.css
@@ -19,6 +19,7 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
+    overflow: auto;
 }
 
 .side>.content>.panel {
