--- a/css/3.panel.css
+++ b/css/3.panel.css
@@ -2,13 +2,12 @@ body>.lr-struct>aside>.content>div {
     margin: var(--length-padding);
 }
 
-body>.lr-struct>aside>.content>div>div>div {
+body>.lr-struct>aside>.content>div>details>div {
     display: grid;
     grid-template-columns: 1fr;
     margin: var(--length-gap) 0;
 }
 
-body>.lr-struct>aside>.content>div>button,
-body>.lr-struct>aside>.content>div>div>div>div {
+body>.lr-struct>aside>.content>div>details>div>div {
     font-size: var(--length-font-log);
 }
