--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url(https://cdn.jsdelivr.net/gh/st-org/st-std@0.23.1/mod.js);
+
 body>.lr-struct>aside>.content>nav details {
     padding-left: var(--length-padding);
 }
