--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url(https://cdn.jsdelivr.net/gh/st-org/st-std@0.31.3/main.css);
+@import url(../st-std@0.31.4/main.css);
 
 @keyframes lr-struct-loading {
     50% {
